// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id integer [primary key]
  firstname varchar(64)
  lastname varchar(64)
  email varchar(256)
  password varchar(256)
  created_at timestamp(256)
  user_group enum(basic, admin)
}

Table images {
  product_id integer
  image varchar(256)
}

Table products {
  id integer [primary key]
  name varchar(256)
  description varchar(1024)
  price float
  count integer
  search_keys varchar(64)
  brand varchar(32)
}

Table parameters {
  product_id integer
  name varchar(64)
  value varchar(64)
}

Table orders {
  id integer [primary key]
  user_id integer
  time_ordered date
  state enum(new,prepared,sent,delivered)
  firstname varchar(64)
  lastname varchar(64)
  transport_type enum(balikomat,kurier,pobocka)
  street_name varchar(64)
  zip_code integer
  phone_number varchar(16)
  payment enum(kartou,dobierka)
}

Table order_products {
  order_id integer
  product_id integer
  count integer
}

Table shopping_cart {
  user_id integer
  product_id integer
  quantity integer
}

Ref: shopping_cart.product_id - products.id
Ref: shopping_cart.user_id > users.id

Ref: images.product_id > products.id

Ref: parameters.product_id > products.id

Ref: orders.user_id > users.id

Ref: order_products.order_id > orders.id
Ref: order_products.product_id > products.id